[gd_scene load_steps=2 format=3 uid="uid://c04apgbcha4tp"]

[ext_resource type="Script" path="res://Towers/tower.gd" id="1_6reuq"]

[node name="Tower" type="Node2D" groups=["tower"]]
script = ExtResource("1_6reuq")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Sprite2D2" type="Sprite2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
